syntax = "proto3";

package order.v1;

import "google/protobuf/wrappers.proto"; 
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option go_package = "github.com/A-mpol/Go-homework/shared/proto/order/v1;order_v1";

service OrderService {
    rpc Create(CreateRequest) returns (CreateResponse) {
        option (google.api.http) = {
            post: "/api/v1/orders"
            body: "*"
        };
    }
    rpc Pay(PayRequest) returns (PayResponse) {
        option (google.api.http) = {
            post: "/api/v1/orders/{order_uuid}/pay"
            body: "*"
        };
    }
    rpc Get(GetRequest) returns (GetResponse) {
        option (google.api.http) = {
            get: "/api/v1/orders/{order_uuid}"
        };
    }
    rpc Cancel(CancelRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/api/v1/orders/{order_uuid}/cancel"
            body: "*"
        };
    }
}

enum Status {
    STATUS_UNKNOWN_UNSPECIFIED = 0;
    STATUS_PENDING_PAYMENT = 1;
    STATUS_PAID = 2;
    STATUS_CANCELLED = 3;
}

message Order {
    string order_uuid = 1;
    string user_uuid = 2;
    repeated string part_uuids = 3;
    double total_price = 4;
    google.protobuf.StringValue transaction_uuid = 5;
    PaymentMethod payment_method = 6;
    Status status = 7;
}

enum PaymentMethod {
    PAYMENT_METHOD_UNKNOWN_UNSPECIFIED = 0;
    PAYMENT_METHOD_CARD = 1;
    PAYMENT_METHOD_SBP = 2;
    PAYMENT_METHOD_CREDIT_CARD = 3;
    PAYMENT_METHOD_INVESTOR_MONEY = 4;
}

message CreateRequest {
    string user_uuid = 1;
    repeated string part_uuids = 2;
}

message CreateResponse {
    string order_uuid = 1;
    double total_price = 2;
}

message PayRequest {
    string order_uuid = 1;
    PaymentMethod payment_method = 2;
}

message PayResponse {
    string transaction_uuid = 1;
}

message GetRequest {
    string order_uuid = 1;
}

message GetResponse {
    Order order = 1;
}

message CancelRequest {
    string order_uuid = 1;
}
